subnets.tf
resource "aws_subnet" "public" {
  count = length(var.public_subnets)

  vpc_id                  = aws_vpc.this.id
  cidr_block              = var.public_subnets[count.index].cidr
  availability_zone       = var.public_subnets[count.index].availability_zone
  map_public_ip_on_launch = true

  tags = merge(local.common_tags, {
    Name = "${var.name}-public-${count.index + 1}"
    Tier = "public"
  })
}

resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnets[count.index].cidr
  availability_zone = var.private_subnets[count.index].availability_zone

  tags = merge(local.common_tags, {
    Name = "${var.name}-private-${count.index + 1}"
    Tier = "private"
  })
}

resource "aws_subnet" "transit" {
  count = length(var.transit_subnets)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.transit_subnets[count.index].cidr
  availability_zone = var.transit_subnets[count.index].availability_zone

  tags = merge(local.common_tags, {
    Name = "${var.name}-transit-${count.index + 1}"
    Tier = "transit"
  })
}
